style.scss
/* ... */
  .footnotes {
    border-top: 1px solid $divider-color;
    font-size: $small-font-size;
  }
.dark-mode{
  // Table
  table {
    margin-bottom: 1rem;
    width: 100%;
    border: 1px solid $table-border-color-dark;
    border-collapse: collapse;
  }

  td, th {
    padding: .25rem .5rem;
    border: 1px solid $table-border-color-dark;
  }

  tbody tr:nth-child(odd) td,
  tbody tr:nth-child(odd) th {
    background-color: $table-background-color-dark;
  }

  // Blockquote
  blockquote {
    font-weight: 300;
    padding: 0 0 0 1.4rem;
    margin: 0 2rem 1rem 0;
    border-left: .2em solid $blockquote-border-color-dark;

    p {
      color: $blockquote-color-dark;
    }

    p:last-child {
      margin-bottom: 0;
    }
  }

  // Footnote
  a.footnote {
    &,
    .post p &,
    .post ol &,
    .post ul & {
      margin: 0 3px;
      padding: 0 2px;
      font-size: $small-font-size;
      text-align: center;
      border: 1px solid $footnote-link-border-color-dark;
      border-radius: 2px;
      -webkit-text-stroke: 0.25px;
      -webkit-transition: 0.2s ease-out all;
      text-decoration: none;

      &:hover {
        background: $footnote-link-background-over-color-dark;
      }
    }
  }

  .footnotes {
    border-top: 1px solid $divider-color-dark;
    font-size: $small-font-size;
  }
}


  // Image
  img {
    display: block;
    max-width: 100%;
    margin: 0 0 1em;
    border-radius: 5px;
  }
.dark-mode{
  // Image
  img {
    display: block;
    max-width: 100%;
    margin: 0 0 1em;
    border-radius: 5px;
    filter: brightness(.8);
  }
}

// Fixes images in popup boxes from Google Translate
.gmnoprint img {
  max-width: none;
}


  // Specify the color of the selection
  ::-moz-selection {
  //  color: $selection-color;
    background: $selection-background-color;
  }
  ::selection {
  //  color: $selection-color;
    background: $selection-background-color;
  }
.dark-mode{
  // Specify the color of the selection
  ::-moz-selection {
  //  color: $selection-color;
    background: $selection-background-color-dark;
  }
  ::selection {
  //  color: $selection-color;
    background: $selection-background-color-dark;
  }
}

// Nicolas Gallagher's micro clearfix hack
// http://nicolasgallagher.com/micro-clearfix-hack/
.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

// Alignment
.center {
  text-align: center;

  &-image {
    margin: 0 auto;
    display: block;
  }
}

.right {
  text-align: right
}

/*********************/
/* LAYOUT / SECTIONS */
/*********************/

//
// .sidebar
//


  .wrapper-sidebar {
    width: 30%;
    -webkit-background-size: cover;
    background-size: cover;
    background-color: $background-color;
    height: 100%;
    top: 0;
    left:0;
    position: fixed;
    z-index: 4;
    border-right: 1px solid $divider-color;

    @include mobile {
      width: 100%;
      height: auto;
      padding-bottom: 24px;
      position: relative;
      border-bottom: 1px solid $divider-color;
      border-right: 0;
    }
  }
}

@media (prefers-color-scheme: dark){
  .wrapper-sidebar {
    width: 30%;
    -webkit-background-size: cover;
    background-size: cover;
    background-color: $background-color-dark;
    height: 100%;
    top: 0;
    left:0;
    position: fixed;
    z-index: 4;
    border-right: 1px solid $divider-color-dark;

    @include mobile {
      width: 100%;
      height: auto;
      padding-bottom: 24px;
      position: relative;
      border-bottom: 1px solid $divider-color-dark;
      border-right: 0;
    }
  }
}

.sidebar {
  padding: 20px 0;

  @include mobile {
    text-align: center;
  }
}

.site-info {
  text-align:center;
  margin: 100px auto 0;

  @include mobile {
    float: none;
    display: block;
    margin: 0 auto;
  }

  .site-avatar {
    margin:0 auto;
    display: block;
    max-width: 200px;
    max-height: 200px;

    @include mobile {
      max-width: 120px;
      max-height: 120px;
    }

    img {
      display: inline-block;
      border-radius: 2px;
    }
  }
}



  .site-name {
    margin: 0 auto;
    color: $base-color;
    cursor: pointer;
    font-family: $base-font;
    font-weight: 700;
    font-size: 28px;
    letter-spacing: 1px;
  }

  .site-description {
    margin: 15px auto;
    color: $base-lighten-color;
    font-size: 16px;

    @include mobile {
      margin: 10px auto;
    }
  }
.dark-mode{
  .site-name {
    margin: 0 auto;
    color: $base-color-dark;
    cursor: pointer;
    font-family: $base-font;
    font-weight: 700;
    font-size: 28px;
    letter-spacing: 1px;
  }

  .site-description {
    margin: 15px auto;
    color: $base-lighten-color-dark;
    font-size: 16px;

    @include mobile {
      margin: 10px auto;
    }
  }
}

.navlist{
  text-align:center;
}

nav {
  display: block;
  margin-top: 23px; // @TODO: Vertically middle align
  font-family: $base-font;
  font-weight: 500;
  font-size: 18px;

  @include mobile {
    margin-top: 9px;
    font-size: 16px;
  }

  a {
    margin: 0 10px;
    text-align: right;
    font-weight: 300;
    letter-spacing: 1px;

    @include mobile {
      margin: 0 10px;
      color: $link-color;
    }
  }
}

// content

.wrapper-content {
  float: right;
  width: 70%;

  @include mobile {
    float: none;
    width: 100%;
  }
}
/* ... */

